[tool.poetry]
name = "db1000n-docs"
version = "0.1.0"
description = "Documentation for DB1000N project with MkDocs"
authors = ["Arriven <https://github.com/Arriven>"]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.2.3"
mkdocs-include-markdown-plugin = "^3.3.0"
mkdocs-material = "^8.2.5"
mkdocs-minify-plugin = "^0.5.0"
mkdocs-redirects = "^1.0.3"
mkdocs-static-i18n = "^0.44"
mkdocs-latest-version-tag-plugin = "^0.1.2"
mdx_truly_sane_lists = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
